<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:background="#f0b803"
        android:padding="5dp" >
        
        <Button 
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
            android:text="@string/back"
            android:textColor="#987b05"
            android:background="@drawable/custom_button" />
        

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:drawableLeft="@drawable/contact_small"
            android:textStyle="bold"
            android:text="@string/contact" />
        
    </RelativeLayout>
    
    <TextView
        android:id="@+id/tvContactDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactdetails"
        android:autoLink="all"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

</LinearLayout>
