<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:background="#f0b803"
        android:padding="5dp" >
        
        <Button 
            android:id="@+id/btBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
            android:text="@string/back"
            android:textColor="#987b05"
            android:background="@drawable/custom_button" />
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:drawableLeft="@drawable/view_small"
            android:textStyle="bold"
            android:text="@string/view" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
    	android:paddingRight="8dp"
    	android:paddingTop="8dp" >

        <TextView
            android:id="@+id/tvHouseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/tvHousePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="12sp" />
    
	    <ImageView
	        android:id="@+id/ivHouse"
	        android:contentDescription="@string/app_name"
	        android:src="@drawable/pottsroad"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
